# fullstack-rust

./: .gitignore  CODE_OF_CONDUCT.md  README.md  rustfmt.toml
client/: Cargo.toml  Web.toml
client/src/: lib.rs  main.rs
client/static/: index.html
schema/: Cargo.toml
schema/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  repository.rs  storage.rs
