[package]
name = "fullstack_demo_client"
version = "0.1.0"
authors = ["Gabriela Surita <gabsurita@gmail.com>"]

[dependencies]
failure = "0.1"
schema = { path = "../schema" }
strum = "0.9"
strum_macros = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = "0.4"
rand = { version = "0.5.5", features = ["stdweb"] }
uuid = { version = "0.6.5", features = ["v4", "serde"] }
